# cryptotaxsweden

./: LICENSE.md  README.md  accountant.py  cli.py  coin.py  excel_reader.py  k4page.py  main.py  personal_details.py  poetry_install.py  pyproject.toml  report.py  report_writer.py  requirements.txt  tax.py  tax_event.py  taxdata.py  trade.py  trade_sheet.py  trades.py  wallet.py  wallets.py
data/: trades_test.csv
heavenlyskatt/: accountant.py  cli.py  fees.py  format.py  main.py  personal_details.py  trade.py  trade_sheet.py  wallets.py
