[tool.poetry]
name = "heavenlyskatt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
python-dateutil = "^2.8.2"
reportlab = "^4.0.7"
fpdf2 = "^2.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
